@@ -1,3 +1,9 @@
+Tue Oct  8 13:33:48 1996  Barry Jaspan  <bjaspan@mit.edu>
+
+	* adb_openclose.c, adb_policy.c: implement database renaming;
+ 	also, only create a db lockfile after the database has been
+ 	successfully created [krb5-admin/62]
+
 Fri Oct  4 08:40:21 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>
 
 	* svr_principal.c (kadm5_get_principal): Do not assume malloc(0)
